Back-out use of Java 9 modules feature.